Added stack trace logging, converted server to Jetty